<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"

   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFF176">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/s"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/p"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p1"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You can now begin developing features with the Google Play services APIs."
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib1"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib2"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib3"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib4"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib5"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib6"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib7"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib8"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib9"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib10"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib11"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib12"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/s2"
            android:scaleType="fitCenter"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/s1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/p2"
                android:textStyle="bold"
                android:background="#80DEEA"
                android:layout_marginRight="10dp"
                android:id="@+id/cm1"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/p2"
                android:textStyle="bold"
                android:id="@+id/cm2"
                android:background="#EF5350"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
           >

            <Button
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/p3"
                android:textStyle="bold"
                android:id="@+id/cm3"
                android:background="#F57C00"
                android:layout_marginRight="10dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/p4"
                android:textStyle="bold"
                android:id="@+id/cm4"
                android:background="#76FF03"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>